# BetterWX-UI

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  update.md  vite.config.js
notes/: wxwork patch 草稿.docx
src/: App.vue  main.js
src-tauri/: 2  Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json  wx.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/log/: MM_20250727.xlog
src-tauri/src/: app.rs  commands.rs  config.rs  error.rs  errors.rs  lib.rs  main.rs  patch.rs  structs.rs  utils.rs  win.rs  wx.rs
src-tauri/src/apis/: cmd.rs  mod.rs  process.rs  rule.rs  shortcut.rs  store.rs  update.rs
src-tauri/src/config/: Cargo.toml
src-tauri/src/config/macros/: Cargo.toml
src-tauri/src/config/macros/src/: lib.rs
src-tauri/src/config/src/: addresses.rs  cache.rs  dfetures.rs  errors.rs  features.rs  files.rs  groups.rs  lib.rs  patches.rs  paths.rs  patterns.rs  rules.rs  update.rs  variables.rs
src-tauri/src/config/src/serders/: default.rs  mod.rs  skippers.rs
src-tauri/src/config/src/views/: address_view.rs  config_view.rs  features_view.rs  files_view.rs  mod.rs  orignal_view.rs  path_view.rs
src-tauri/src/logger/: Cargo.toml
src-tauri/src/logger/src/: lib.rs
src-tauri/src/services/: Cargo.toml
src-tauri/src/services/src/: cmd.rs  errors.rs  lib.rs  process.rs  rule.rs  shortcut.rs  store.rs  update.rs  version.rs
src-tauri/src/setting/: Cargo.toml
src-tauri/src/setting/src/: lib.rs
src-tauri/src/structs/: config.rs  files_info.rs
src-tauri/src/structs/config/: features.rs  files_info.rs  patches.rs  paths.rs  patterns.rs  regedit.rs  rules.rs  variables.rs
src-tauri/src/utils/: Cargo.toml  file.rs  logger.rs  patch.rs  process.rs  regedit.rs  tools.rs  win.rs
src-tauri/src/utils/src/: base64.rs  cmd.rs  empty.rs  errors.rs  file.rs  file_pid_hwnd.rs  http.rs  lib.rs  process.rs  runtime.rs  shortcut.rs  store.rs  tools.rs  version.rs
src-tauri/src/utils/src/patch/: errors.rs  jump_offset.rs  mod.rs  patch.rs  types.rs
src-tauri/src/winsys/: Cargo.toml
src-tauri/src/winsys/src/: errors.rs  fileinfo.rs  lib.rs  registry.rs  shortcut.rs  win.rs
src-tauri/src/winsys/src/process/: hwnd.rs  macros.rs  mod.rs  mutex.rs  pid.rs  process.rs
src-tauri/src/winsys/src/types/: mod.rs  wstr.rs
src/apis/: cmd.js  process.js  rule.js  shortcut.js  store.js  update.js
src/assets/: primevue-config.js  styles.css
src/components/: coexist-item.vue  coexist-list.vue  loading.vue  patch-panel.vue  readme-panel.vue  splash.vue  switch-box.vue
src/config/: app_config.js  config.json  features.js  primevue.js  primevue_config.js  tesg.json
src/utils/: bridge.js  crypto.js  http.js  store.js  tools.js  utils.js
