[workspace.package]
version = "3.0.0"
edition = "2024"

[package]
name = "BetterWX-UI"
version.workspace = true
edition.workspace = true
description = "A BetterWX-UI App"
authors = ["afaa1991"]

resolver = "2"

[workspace]
members = [
    "src/config",
    "src/logger",
    "src/services",
    "src/setting",
    "src/utils",
    "src/winsys",
]

[dev-dependencies]
ctor = "0.4"

[lib]
name = "betterwx_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
regex = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
tokio = "1"
logger = { path = "src/logger" }
setting = { path = "src/setting" }
utils = { path = "src/utils" }
winsys = { path = "src/winsys" }
config = { path = "src/config" }
known-folders = "1"
serde_json = "1"
log = "0.4"
thiserror = "2"
regex = "1"
serde_repr = "0.1"
aobscan = "0.3"
memmap2 = "0.9"
reqwest = "0.12"
base64 = "0.22"
rand = "0.9"

[dependencies]
logger = { workspace = true }
utils = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
winsys = { workspace = true }
config = { workspace = true }
tokio = { workspace = true }
services = { path = "src/services" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"

[features]
admin = []
