[package]
name = "config"
version.workspace = true
edition.workspace = true

[dependencies]
macros = {path="macros"}
thiserror = { workspace = true } 
serde = { workspace = true }
serde_json = { workspace = true }
utils = { workspace = true }
log = { workspace = true }
winsys = { workspace = true }
regex = { workspace = true }
serde_repr = { workspace = true }
setting = { workspace = true }
tokio = { workspace = true }
