[package]
name = "services"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = { workspace = true } 
serde = { workspace = true }
serde_json = { workspace = true }
utils = { workspace = true }
log = { workspace = true }
config = { workspace = true }
winsys = { workspace = true }
logger = { workspace = true }
setting = { workspace = true }
tokio = { workspace = true }
