[package]
name = "utils"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = { workspace = true }
log = { workspace = true }
winsys = { workspace = true }
aobscan = { workspace = true }
memmap2 = { workspace = true }
logger = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
setting = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
known-folders = { workspace = true }
pelite = { workspace = true }