[package]
name = "winsys"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = { workspace = true }
known-folders = { workspace = true }
logger = { workspace = true }
serde = { workspace = true }
log = { workspace = true }

[dependencies.windows]
version = "0.61"
default-features = false
features = [
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_Com_CallObj",
    "Win32_System_ProcessStatus",
    "Win32_Storage_FileSystem",
    "Win32_UI_HiDpi",
]